[package]
name = "latinify"
version = "1.0.0"
edition = "2021"
description = "Just another super-simple Pig Latin translator..."
readme = "README.md"
repository = "https://github.com/poopsicles/latinify"
license = "MIT"
keywords = ["pig-latin", "translator"]
categories = ["command-line-utilities"]

[dependencies]
rayon = "1.5"